feat(security): complete JWT auth with role-based authorization